--- a/nextjs-app/src/app/globals.css
+++ b/nextjs-app/src/app/globals.css
@@ -10,6 +10,9 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
+  max-width: 50rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @layer utilities {
